src/test/deca/context/invalid/tests/AssinIcompatibleWithMthod2.deca
// Description:
//       Teste l'affectation incompatible entre un identificateur de 
//       methode à gauche
// Resultats: 
//      Ligne 12: on peut pas assigner une valeur à une method
// 
// Historique:
//      cree le 22/01/2023
class A{
  int f(){
    int x;
    x = f;
    return x;
  }
}
